# iceOS

./: .coveragerc  .cursorrules  .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  .ruff.toml  .tmp_api_token  CHANGELOG.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  DEMOS.md  Dockerfile  HEALTHCHECKS.md  Makefile  README.md  SDK_ASSET_INVENTORY.md  SDK_VALUE_ANALYSIS.md  alembic.ini  chains.toml  demo_chain.chain.py  dependency_analysis_report.json  docker-compose.itest.staging.yml  docker-compose.itest.yml  docker-compose.livebuilder.yml  docker-compose.onefile.yml  docker-compose.release.yml  docker-compose.staging.yml  docker-compose.yml  document_assistant_blueprint_results.json  document_assistant_mcp_results.json  dump.rdb  env.ci  facebook_marketplace_blueprint_results.json  input.json  items.csv  mkdocs.yml  mypy.ini  poetry.toml  pyproject.toml  (+8 more)
.github/workflows/: ci-integration.yml  ci-wasm.yml  ci.yml  consumer-e2e.yml  docker-publish.yml  docs.yml  layer-check.yml  layer-guard.yml  nightly.yml  onefile-smoke.yml  production-gate.yml  publish.yml  release-client.yml  release.yml  test.yml
.ice/: builder.draft.json
ADR/: 0001-initial-architecture.md
_archive/20250728_141034/: migration_data.json
_scaffold_test_out/: testchain.chain.py  testnode.ainode.yaml  testtool.tool.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0001_initial_core_schema.py  0002_add_semantic_embedding_vector.py  0002_add_semantic_indexes.py  0002_kb_memories.py  0002_org_user_columns_semantic.py  0003_add_semantic_memory_composite_indexes.py  0003_semantic_org_contenthash_unique.py  0004_add_embedding_column_vector.py  0004_library_metadata.py  0005_add_workspaces_projects_mounts.py  0005_semantic_org_user_not_null.py
app/data/: context_store.json
cli_demo/: demo_node.ainode.yaml  demo_tool.tool.py  google_chain.chain.py  google_search.ainode.yaml  my_chain.chain.py  simple_node.ainode.yaml
cli_demo/brand_demo/: frosty_chain.chain.py  frosty_tools.py
cli_demo/google_search_demo/: __main__.py
clients/ice_client/: README.md  pyproject.toml
config/: .importlinter  dev.env.example  importlinter_app.ini  importlinter_builder.ini  importlinter_cli.ini  importlinter_client.ini  importlinter_core.ini  importlinter_orchestrator.ini  pyrightconfig.json  pyrightconfig.jsonc  staging.env.example
config/deploy/: docker-compose.example.yml  docker-compose.prod.yml  nginx.dev.conf
config/linting/: ruff.toml
config/postman/: iceos.postman_collection.json
config/testing/: pytest.ini
config/typing/: mypy.ini
demo_space/: chains.toml
demos/design_assistant/: __main__.py
demos/essay_writer/: essay_chain.chain.py  workflow_spec_template.md
docs/: AGENT_SWARMS_ARCHITECTURE.md  ARCHITECTURE.md  BENCHMARKS.md  BUILD_YOUR_FIRST_TOOL.md  CLEAN_ARCHITECTURE_PLAN.md  CLIENT_QUICKSTART.md  CONFIG_ARCHITECTURE.md  COPILOT_PLAN.md  DEPLOY_PROD.md  DEPLOY_STAGING.md  DEV_WORKFLOW.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_STATUS.md  END_TO_END_STORY.md  ENTERPRISE_REUSE_PATTERNS.md  EXERCISES.md  EXPERIMENTS_AND_DEMOS.md  EXTERNAL_PITCH.md  FACTORY_PATTERN_TODO.md  FRONTEND_CANVAS_NOTES.md  LAUNCH_PLAN.md  LAUNCH_PLAYBOOK.md  MCP_IMPLEMENTATION.md  NESTED_ARCHITECTURE_UPGRADE.md  NETWORKX_GRAPH_INTELLIGENCE.md  PLUGINS_AND_BUNDLES.md  PLUGINS_MANIFEST_CONTRACT.md  PRODUCTION_USER_STORAGE_ARCHITECTURE.md  QUICKSTART.md  QUICK_GUIDE.md  README.md  RECURSIVE_FLOWS_GUIDE.md  SANDBOXING_PLAN.md  SECURITY_TOKENS.md  SETUP.md  SETUP_GUIDE.md  STAGING.md  STUDIO_CANVAS_BUILDER.md  STUDIO_FLOW.md  VERIFICATION.md  (+51 more)
examples/: README.md  check_loop_executor.py  comprehensive_demo.py  comprehensive_demo_enhanced.py  comprehensive_demo_example.py  create_reasoning_chain.py  custom_agent_demo.py  debug_executor_flow.py  debug_loop_executor.py  debug_loop_with_logging.py  debug_serialization.py  inventory_report_blueprint.json  inventory_report_blueprint_chain.json  items.csv  marketplace_conversation_demo.py  marketplace_multi_turn_demo.py  marketplace_simple_test.py  mcp_complete_example.py  memory_usage_example.py  my_first_chain.py  recursive_demo.json  run_character_story.py  run_inventory_report.py  run_inventory_report_chain.py  run_story_chain.py  seller_assistant_direct.py  seller_assistant_fluent.py  seller_assistant_live.py  swarm_demo.json  test_context_aware.py  test_loop_with_prints.py  test_minimal_loop.py  test_seller_minimal.py  word_count.tool.py  word_count_tool.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.base.json
infra/: main.tf
notebooks/: RAG_Quickstart.ipynb
ops/: otel-config.yaml
reports/: depgraph.json  dynamic_imports.txt  registry_imports.txt  service_locator_usage.txt  structural_audit_20250805.md
samples/: __init__.py  northstar.md  northstardemo.md
schemas/: AppConfig.json  LLMConfig.json  MessageTemplate.json  flow_spec_v0.1.json
scratch/: __init__.py
scripts/: analyze_dependencies.py  archive_duplicates.py  bootstrap_registry_live.py  check_coverage.py  check_flow_spec.py  check_json_yaml.py  check_layers.py  check_license.py  check_llm_protocols.py  cleanup_deprecated.py  cleanup_deprecated_v2.py  cleanup_legacy_shims.py  db_query_count.py  demo_content_repurposer_run.py  doctor.py  export_chain_run.py  export_schemas.py  fix_node_schemas.py  gen_catalog.py  gen_cli_overview.py  gen_metrics_rules.py  gen_overview.py  gen_repo_layout.py  gen_training_data.py  generate_schemas.py  itest_runner.sh  itest_smoke_load.sh  migrate_to_new_system.py  migrate_to_supabase.sql  migrate_to_unified_registry.py  netcheck.py  publish_images.sh  register_new_tools.py  rename_helper.py  requirements.txt  run_chain.sh  run_custom_chain.py  run_migrations.py  run_search_sql.py  search_probe.py  (+9 more)
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: structlog.py
test_project/: chains.toml
tests/: conftest.py  run_memory_tests.py  test_chain_e2e.py  test_legacy_and_guardrails.py  test_llm_executor.py  test_output_validator.py
tests_smoke/: test_smoke.py
use-cases/: __init__.py
(+1641 files in other folders)
