[tool.poetry]
name = "iceos-client"
version = "0.1.0"
description = "Python client for the iceOS API (typed, async-friendly)"
authors = ["iceOS Authors <dev@iceos.local>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/stef-writes/iceOS"
repository = "https://github.com/stef-writes/iceOS"
keywords = ["iceos", "workflow", "orchestrator", "client", "mcp"]
packages = [
  { include = "ice_client", from = "../../src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
httpx = "^0.24.1"
pydantic = ">=2.7.0"
typing-extensions = ">=4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
mypy = "==1.10.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
